# wiselook-assessment

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py  routes.py
app/domain/: constants.py  models.py  state.py
app/graph/: builder.py  edges.py  nodes.py
app/llm/: client.py  prompts.py
app/observability/: logging.py
evaluation/: checks.py  judge.py  run_eval.py
evaluation/golden/: cautious_and_reactive.json  curious_and_organized.json
static/: index.html
tests/: conftest.py  test_api.py  test_edges.py  test_models.py  test_nodes.py
